<resources>
    <string name="app_name">EarthQuakeTest</string>
    <string name="action_settings">Settings</string>
    <string name="image_generic_description">Generic Description</string>
    <string name="lbl_date_format">aaaa-mm-dd</string>
    <string name="must_enter_start_time">Selecione una fecha de inicio</string>
    <string name="must_enter_end_time">Selecione una fecha de fin</string>
    <string name="must_have_network_access">No se detecta conexión a internet</string>
    <string name="find_earthquake">Buscar sismo :</string>
    <string name="select_magnitude">Seleccione la magnitud</string>
    <string name="start_value_magnitude">0.0 Grados Richter</string>
    <string name="start_time">Fecha de inicio</string>
    <string name="end_time">Fecha final</string>
    <string name="query">C o n s u l t a</string>
    <string name="query_all">C o n s u l t a r T o d o s</string>
    <string name="no_current_date">La fecha no es actual</string>
    <string name="must_have_magnitude_valid">Debe seleccionar una magnitud valida</string>
    <string name="no_data_available">No se encontraron registros</string>
</resources>
